export interface Empresa {
    id?: number;
    username?: string;
    email: string;
    password?: string;
    rol?: string;
    nombre: string;
    ruc: string;
    telefono: string;
    logo?: string;
    estado?: boolean;
}
